--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">RPG_PI2_20211</string>
+
+    <string name="hint_email">Email</string>
+    <string name="hint_senha">Senha</string>
+    <string name="botao_entrar">Entrar</string>
+    <string name="botao_cad">Cadastrar</string>
+
 </resources>
