Adição d botão Voltar no Cadastro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="hint_cadastro_senha">Digite a senha</string>
     <string name="hint_cadastro_senha_confirma">Confirme a senha</string>
     <string name="botao_cadastro_confirmar">Confirmar</string>
+    <string name="botao_cadastro_voltar">Voltar</string>
 
 </resources>
