--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="hint_cadastro_senha_confirma">Confirme a senha</string>
     <string name="botao_cadastro_confirmar">Confirmar</string>
     <string name="botao_cadastro_voltar">Voltar</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
