--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,9 @@
     <string name="login_generic_error">Não foi possível efetuar login. Por favor verifique os dados</string>
     <string name="hello_world">Hello Square World!</string>
 
+    <!-- NOME APP -->
+    <string name="nome">DALIBOR</string>
+
 
     <string-array name="planets_array">
         <item>Mercury</item>
